# catdog_classifier

./: README.md  data.dvc  dvc.yaml  pyproject.toml
configs/: eval.yaml  infer.yaml  train.yaml
configs/experiment/: catdog_ex.yaml
configs/trainer/: default.yaml
scripts/: generate_plots.py
src/: eval.py  infer.py  train.py
src/datamodules/: catdog_datamodule.py
src/models/: timm_classifier.py
tests/datamodules/: test_catdog_datamodule.py
tests/models/: test_timm_classifier.py
tests/test_datamodule/: test_dogbreed.py
tests/test_eval/: test_eval.py
tests/test_infer/: test_infer.py
tests/test_model/: test_timm_classifier.py
tests/test_train/: test_train.py
